[package]
name = "hsm-onboarding"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
futures-core = "0.3"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
vaultrs = "0.7.3"
